pluma_parser/tests/snapshots/parse_success__let_mut_pattern_identifier.snap
---
source: pluma_parser/tests/parse_success.rs
expression: let mut x = 47
---

=== Source ===
let mut x = 47

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        14,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                14,
            ),
            kind: Let(
                LetNode {
                    pos: (
                        0,
                        14,
                    ),
                    pattern: PatternNode {
                        pos: (
                            4,
                            9,
                        ),
                        kind: Identifier(
                            IdentifierNode {
                                pos: (
                                    8,
                                    9,
                                ),
                                name: "x",
                            },
                            true,
                        ),
                    },
                    value: ExprNode {
                        pos: (
                            12,
                            14,
                        ),
                        kind: Literal(
                            LiteralNode {
                                pos: (
                                    12,
                                    14,
                                ),
                                kind: IntDecimal(
                                    47,
                                ),
                            },
                        ),
                        typ: Unknown,
                    },
                },
            ),
        },
    ],
}

