pluma_parser/tests/snapshots/parse_success__let_mut_pattern_tuple.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "let (a, mut b) = (47, \"cool\")"
---

=== Source ===
let (a, mut b) = (47, "cool")

=== Tokens ===
[
    KeywordLet(
        0,
        3,
    ),
    LeftParen(
        4,
        5,
    ),
    Identifier(
        5,
        6,
    ),
    Comma(
        6,
        7,
    ),
    KeywordMut(
        8,
        11,
    ),
    Identifier(
        12,
        13,
    ),
    RightParen(
        13,
        14,
    ),
    Equals(
        15,
        16,
    ),
    LeftParen(
        17,
        18,
    ),
    DecimalDigits(
        18,
        20,
    ),
    Comma(
        20,
        21,
    ),
    StringLiteral(
        23,
        27,
    ),
    RightParen(
        28,
        29,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        29,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                29,
            ),
            kind: Let(
                LetNode {
                    pos: (
                        0,
                        29,
                    ),
                    pattern: PatternNode {
                        pos: (
                            4,
                            14,
                        ),
                        kind: Tuple(
                            [
                                PatternNode {
                                    pos: (
                                        5,
                                        6,
                                    ),
                                    kind: Identifier(
                                        IdentifierNode {
                                            pos: (
                                                5,
                                                6,
                                            ),
                                            name: "a",
                                        },
                                        false,
                                    ),
                                },
                                PatternNode {
                                    pos: (
                                        8,
                                        13,
                                    ),
                                    kind: Identifier(
                                        IdentifierNode {
                                            pos: (
                                                12,
                                                13,
                                            ),
                                            name: "b",
                                        },
                                        true,
                                    ),
                                },
                            ],
                        ),
                    },
                    value: ExprNode {
                        pos: (
                            17,
                            29,
                        ),
                        kind: Tuple(
                            [
                                ExprNode {
                                    pos: (
                                        18,
                                        20,
                                    ),
                                    kind: Literal(
                                        LiteralNode {
                                            pos: (
                                                18,
                                                20,
                                            ),
                                            kind: IntDecimal(
                                                47,
                                            ),
                                        },
                                    ),
                                    typ: Unknown,
                                },
                                ExprNode {
                                    pos: (
                                        23,
                                        27,
                                    ),
                                    kind: Literal(
                                        LiteralNode {
                                            pos: (
                                                23,
                                                27,
                                            ),
                                            kind: Str(
                                                "cool",
                                            ),
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ],
                        ),
                        typ: Unknown,
                    },
                },
            ),
        },
    ],
}

