pluma_parser/tests/snapshots/parse_success__let_pattern_mut_struct_constructor.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "let Person (mut name, age) = Person (\"Reid\", 26)"
---

=== Source ===
let Person (mut name, age) = Person ("Reid", 26)

=== Tokens ===
[
    KeywordLet(
        0,
        3,
    ),
    Identifier(
        4,
        10,
    ),
    LeftParen(
        11,
        12,
    ),
    KeywordMut(
        12,
        15,
    ),
    Identifier(
        16,
        20,
    ),
    Comma(
        20,
        21,
    ),
    Identifier(
        22,
        25,
    ),
    RightParen(
        25,
        26,
    ),
    Equals(
        27,
        28,
    ),
    Identifier(
        29,
        35,
    ),
    LeftParen(
        36,
        37,
    ),
    StringLiteral(
        38,
        42,
    ),
    Comma(
        43,
        44,
    ),
    DecimalDigits(
        45,
        47,
    ),
    RightParen(
        47,
        48,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        48,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                48,
            ),
            kind: Let(
                LetNode {
                    pos: (
                        0,
                        48,
                    ),
                    pattern: PatternNode {
                        pos: (
                            4,
                            26,
                        ),
                        kind: Constructor(
                            IdentifierNode {
                                pos: (
                                    4,
                                    10,
                                ),
                                name: "Person",
                            },
                            PatternNode {
                                pos: (
                                    11,
                                    26,
                                ),
                                kind: Tuple(
                                    [
                                        PatternNode {
                                            pos: (
                                                12,
                                                20,
                                            ),
                                            kind: Identifier(
                                                IdentifierNode {
                                                    pos: (
                                                        16,
                                                        20,
                                                    ),
                                                    name: "name",
                                                },
                                                true,
                                            ),
                                        },
                                        PatternNode {
                                            pos: (
                                                22,
                                                25,
                                            ),
                                            kind: Identifier(
                                                IdentifierNode {
                                                    pos: (
                                                        22,
                                                        25,
                                                    ),
                                                    name: "age",
                                                },
                                                false,
                                            ),
                                        },
                                    ],
                                ),
                            },
                        ),
                    },
                    value: ExprNode {
                        pos: (
                            29,
                            48,
                        ),
                        kind: Call(
                            CallNode {
                                pos: (
                                    29,
                                    48,
                                ),
                                callee: ExprNode {
                                    pos: (
                                        29,
                                        35,
                                    ),
                                    kind: Identifier(
                                        IdentifierNode {
                                            pos: (
                                                29,
                                                35,
                                            ),
                                            name: "Person",
                                        },
                                    ),
                                    typ: Unknown,
                                },
                                args: [
                                    ExprNode {
                                        pos: (
                                            36,
                                            48,
                                        ),
                                        kind: Tuple(
                                            [
                                                ExprNode {
                                                    pos: (
                                                        38,
                                                        42,
                                                    ),
                                                    kind: Literal(
                                                        LiteralNode {
                                                            pos: (
                                                                38,
                                                                42,
                                                            ),
                                                            kind: Str(
                                                                "Reid",
                                                            ),
                                                        },
                                                    ),
                                                    typ: Unknown,
                                                },
                                                ExprNode {
                                                    pos: (
                                                        45,
                                                        47,
                                                    ),
                                                    kind: Literal(
                                                        LiteralNode {
                                                            pos: (
                                                                45,
                                                                47,
                                                            ),
                                                            kind: IntDecimal(
                                                                26,
                                                            ),
                                                        },
                                                    ),
                                                    typ: Unknown,
                                                },
                                            ],
                                        ),
                                        typ: Unknown,
                                    },
                                ],
                                typ: Unknown,
                            },
                        ),
                        typ: Unknown,
                    },
                },
            ),
        },
    ],
}

