pluma_parser/tests/snapshots/parse_success__let_pattern_struct_constructor.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "let Person (name, age) = Person (\"Reid\", 26)"
---

=== Source ===
let Person (name, age) = Person ("Reid", 26)

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        44,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                44,
            ),
            kind: Let(
                LetNode {
                    pos: (
                        0,
                        44,
                    ),
                    pattern: PatternNode {
                        pos: (
                            4,
                            22,
                        ),
                        kind: Constructor(
                            IdentifierNode {
                                pos: (
                                    4,
                                    10,
                                ),
                                name: "Person",
                            },
                            PatternNode {
                                pos: (
                                    11,
                                    22,
                                ),
                                kind: Tuple(
                                    [
                                        PatternNode {
                                            pos: (
                                                12,
                                                16,
                                            ),
                                            kind: Identifier(
                                                IdentifierNode {
                                                    pos: (
                                                        12,
                                                        16,
                                                    ),
                                                    name: "name",
                                                },
                                                false,
                                            ),
                                        },
                                        PatternNode {
                                            pos: (
                                                18,
                                                21,
                                            ),
                                            kind: Identifier(
                                                IdentifierNode {
                                                    pos: (
                                                        18,
                                                        21,
                                                    ),
                                                    name: "age",
                                                },
                                                false,
                                            ),
                                        },
                                    ],
                                ),
                            },
                        ),
                    },
                    value: ExprNode {
                        pos: (
                            25,
                            44,
                        ),
                        kind: Call(
                            CallNode {
                                pos: (
                                    25,
                                    44,
                                ),
                                callee: ExprNode {
                                    pos: (
                                        25,
                                        31,
                                    ),
                                    kind: Identifier(
                                        IdentifierNode {
                                            pos: (
                                                25,
                                                31,
                                            ),
                                            name: "Person",
                                        },
                                    ),
                                    typ: Unknown,
                                },
                                args: [
                                    ExprNode {
                                        pos: (
                                            32,
                                            44,
                                        ),
                                        kind: Tuple(
                                            [
                                                ExprNode {
                                                    pos: (
                                                        34,
                                                        38,
                                                    ),
                                                    kind: Literal(
                                                        LiteralNode {
                                                            pos: (
                                                                34,
                                                                38,
                                                            ),
                                                            kind: Str(
                                                                "Reid",
                                                            ),
                                                        },
                                                    ),
                                                    typ: Unknown,
                                                },
                                                ExprNode {
                                                    pos: (
                                                        41,
                                                        43,
                                                    ),
                                                    kind: Literal(
                                                        LiteralNode {
                                                            pos: (
                                                                41,
                                                                43,
                                                            ),
                                                            kind: IntDecimal(
                                                                26,
                                                            ),
                                                        },
                                                    ),
                                                    typ: Unknown,
                                                },
                                            ],
                                        ),
                                        typ: Unknown,
                                    },
                                ],
                                typ: Unknown,
                            },
                        ),
                        typ: Unknown,
                    },
                },
            ),
        },
    ],
}

