pluma_parser/tests/snapshots/parse_success__list_of_strings.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "[\"hey\", \"wow\", \"cool\", \"multi-\n\nline\"]"
---

=== Source ===
["hey", "wow", "cool", "multi-

line"]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        38,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                38,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        38,
                    ),
                    kind: List(
                        [
                            ExprNode {
                                pos: (
                                    2,
                                    5,
                                ),
                                kind: Literal(
                                    LiteralNode {
                                        pos: (
                                            2,
                                            5,
                                        ),
                                        kind: Str(
                                            "hey",
                                        ),
                                    },
                                ),
                                typ: Unknown,
                            },
                            ExprNode {
                                pos: (
                                    9,
                                    12,
                                ),
                                kind: Literal(
                                    LiteralNode {
                                        pos: (
                                            9,
                                            12,
                                        ),
                                        kind: Str(
                                            "wow",
                                        ),
                                    },
                                ),
                                typ: Unknown,
                            },
                            ExprNode {
                                pos: (
                                    16,
                                    20,
                                ),
                                kind: Literal(
                                    LiteralNode {
                                        pos: (
                                            16,
                                            20,
                                        ),
                                        kind: Str(
                                            "cool",
                                        ),
                                    },
                                ),
                                typ: Unknown,
                            },
                            ExprNode {
                                pos: (
                                    24,
                                    36,
                                ),
                                kind: Literal(
                                    LiteralNode {
                                        pos: (
                                            24,
                                            36,
                                        ),
                                        kind: Str(
                                            "multi-\n\nline",
                                        ),
                                    },
                                ),
                                typ: Unknown,
                            },
                        ],
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

